{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 15,
  "lineage": "c7b48997-893c-b974-612d-b50843133b19",
  "resources": [
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013da1cc4ae87618c",
            "arn": "arn:aws:ec2:us-east-1:415352219645:instance/i-0414dcca883de3487",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0414dcca883de3487",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-20201008014206047400000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a60c73dfd6b0603",
            "private_dns": "ip-172-31-75-76.ec2.internal",
            "private_ip": "172.31.75.76",
            "public_dns": "ec2-3-233-226-225.compute-1.amazonaws.com",
            "public_ip": "3.233.226.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f983b390466afe2d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20201008014206048900000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b925e96b3a36bf90",
            "tags": {
              "Name": "prep",
              "name": "prep"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0201028ab01fab57d"
            ]
          },
          "dependencies": [
            "module.defaults.aws_key_pair.this",
            "module.defaults.aws_security_group.this",
            "module.defaults.module.ami.data.aws_ami.ubuntu_1804"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:security-group/sg-0201028ab01fab57d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0201028ab01fab57d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9113,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9113
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9115,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9115
              }
            ],
            "name": "terraform-20201008014206048900000002",
            "name_prefix": "",
            "owner_id": "415352219645",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09aa4e0cc70c3073d"
          }
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-304503706",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_tcp_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-3937681324",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 9113,
            "id": "sgrule-4109894028",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9113,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 9115,
            "id": "sgrule-1198222824",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9115,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3546463611",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_tcp_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-757079066",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 7100,
            "id": "sgrule-873064866",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 7100,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9000,
            "id": "sgrule-158535618",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_udp_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 7100,
            "id": "sgrule-1254492986",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 7100,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9000,
            "id": "sgrule-2008870234",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0201028ab01fab57d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "dependencies": [
            "module.defaults.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}